Backport to 1.20.4